<resources>
    <string name="app_name">TeamE_HopReview</string>
    <string name="app_title">HopReview</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_course">Course</string>
    <string name="title_professor">Professor</string>
    <string name="title_courses">Courses</string>
    <string name="title_professors">Professors</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">HopReview</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="recent_reviews">Recent Reviews</string>
    <string name="pick_course">Pick Your Course</string>
    <string name="pick_professor">Pick Your Professor</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_email">Confirm Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="welcome_log_in">Log In</string>
    <string name="welcome_new_account">Create Account</string>
    <string name="action_log_in">LOG IN</string>
    <string name="action_sign_up">CREATE ACCOUNT</string>
    <string name="say_hello">Say hello to a stress-free life</string>
    <string name="prompt_no_account_create">Don\'t have an account yet? Don\'t fret!</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="comment">Comment</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="delete_acct">DELETE ACCOUNT</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="my_courses">My Courses</string>
    <string name="my_reviews">My Reviews</string>
    <string name="review_by">Review by:</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="delete_account_1">Are you sure that you want to delete your account?</string>
    <string name="delete_account_2">Your account settings and saved preferences will be permanently gone.</string>
    <string name="delete_account_3">And more importantly we will miss you!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Course Panel Items-->
    <string name="course_ratings">Course Ratings</string>
    <string name="professor_ratings">Professor Ratings</string>
    <string name="workload_txt">Workload</string>
    <string name="fun_txt">Fun</string>
    <string name="grading_txt">Grading</string>
    <string name="knowledge_txt">Knowledge</string>

    <string name="average_rating">Average Rating</string>
    <string name="workload_rating">Workload</string>
    <string name="fun_rating">Fun</string>
    <string name="logout">Log Out</string>
    <string name="search">search</string>
    <string name="prompt_select_course">Select a course</string>
    <string name="reviews_list">Reviews</string>
    <string name="update_password">Update Password</string>
    <string name="profile_settings">Update Profile</string>
    <string name="account_settings">Account Settings</string>
    <string name="username">USERNAME</string>
    <string name="email_sample">bluejay@jhu.edu</string>

</resources>