<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/courses"
        android:title="@string/title_courses" />

    <item
        android:id="@+id/navigation_professors"
        android:icon="@drawable/professor"
        android:title="@string/title_professors" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_reviews"
        android:icon="@drawable/profile"
        android:title="Reviews" />

</menu>