<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/delete_acct2"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="?attr/colorError"
        android:text="@string/delete_acct"
        android:textColor="?attr/colorOnError"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858" />

    <TextView
        android:id="@+id/warning1"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_1"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200" />

    <TextView
        android:id="@+id/warning2"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_2"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.300" />

    <TextView
        android:id="@+id/warning3"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_3"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />
</androidx.constraintlayout.widget.ConstraintLayout>